objects/Test_Case__c/fields/Development_Task__c.field-meta.xml
<CustomField>
    <fullName>Development_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional field if there are aspects of this test related to a specific Development Task</inlineHelpText>
    <label>Development Task</label>
    <referenceTo>Development_Task__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>