objects/Test_Case__c/fields/Functional_Testing_Areas__c.field-meta.xml
<CustomField>
    <fullName>Functional_Testing_Areas__c</fullName>
    <label>Functional Testing Area(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Integration</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Contract PDF</fullName>
            </value>
            <value>
                <fullName>CPQ/Approval</fullName>
            </value>
            <value>
                <fullName>CPQ/Configuration</fullName>
            </value>
            <value>
                <fullName>CPQ/PDF</fullName>
            </value>
            <value>
                <fullName>CPQ/Tech Details</fullName>
            </value>
            <value>
                <fullName>Docusign</fullName>
            </value>
            <value>
                <fullName>ICB</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Notes/Attachments</fullName>
            </value>
            <value>
                <fullName>Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>Order TOV</fullName>
            </value>
            <value>
                <fullName>Order Workflow</fullName>
            </value>
            <value>
                <fullName>QoS Tool</fullName>
            </value>
            <value>
                <fullName>Sales Product Catalog</fullName>
            </value>
            <value>
                <fullName>Sales Reporting</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>