objects/Test_Case__c/fields/Send_Assignment_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Assignment_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this box is checked, an email notification will be sent out upon test assignment.</inlineHelpText>
    <label>Send Assignment Email</label>
    <type>Checkbox</type>
</CustomField>