objects/Test_Case__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Story</label>
    <referenceTo>Story__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>