objects/Test_Case__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Auto-filled by the system. Do not edit this field.</inlineHelpText>
    <label>Parent Test Case</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Must be a Test Case record type, not a Test Case Assignment</errorMessage>
        <filterItems>
            <field>Test_Case__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Test Case Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Test Case Assignments</relationshipLabel>
    <relationshipName>Test_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>