objects/Test_Case__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <label>Test Date</label>
    <type>DateTime</type>
</CustomField>