objects/Test_Case__c/fields/Test_Failed_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Failed_Status__c</fullName>
    <label>Test Failed Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Test_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed by Story Owner</fullName>
            </value>
            <value>
                <fullName>Passed to IT</fullName>
            </value>
            <value>
                <fullName>Issue Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>