objects/Test_Case__c/fields/Test_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Test_Instructions__c</fullName>
    <label>Test Instructions</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>