objects/Test_Case__c/fields/Test_Summary__c.field-meta.xml
<CustomField>
    <fullName>Test_Summary__c</fullName>
    <label>Test Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>