objects/Test_Case__c/recordTypes/Assign_Existing_Test_Case.recordType-meta.xml
<RecordType>
    <fullName>Assign_Existing_Test_Case</fullName>
    <active>true</active>
    <description>Junction record type used to reference a Test Case and create a Test Case Assignment</description>
    <label>Assign Existing Test Case</label>
</RecordType>