objects/Test_Case__c/recordTypes/Test_Case_Template.recordType-meta.xml
<RecordType>
    <fullName>Test_Case_Template</fullName>
    <active>true</active>
    <description>To be used as a Test Case template that can be used multiple times and is not assigned to any story, dev task or tester</description>
    <label>Test Case Template</label>
</RecordType>