objects/Test_Case__c/validationRules/Require_Related_Test_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Related_Test_Case</fullName>
    <active>true</active>
    <description>If record type is &quot;Assign Existing Test Case&quot; then require related Test Case record</description>
    <errorConditionFormula>AND(
 $RecordType.Name = &quot;Assign Existing Test Case&quot;,
 ISNULL( Test_Case__c )
)</errorConditionFormula>
    <errorDisplayField>Test_Case__c</errorDisplayField>
    <errorMessage>Using this record type requires a value in the Parent Test Case field</errorMessage>
</ValidationRule>