objects/Test_Case__c/validationRules/Test_Case_Template_Cannot_Be_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Case_Template_Cannot_Be_Assigned</fullName>
    <active>true</active>
    <description>If you try to use the &quot;assigned to&quot; field on a test case template, get an error</description>
    <errorConditionFormula>AND(
 $RecordType.Name = &quot;Test Case Template&quot;,
 NOT( ISBLANK( Assigned_To__c ))
)</errorConditionFormula>
    <errorMessage>Test Case Templates cannot be assigned. Please use the &quot;Assign Test Case&quot; button to create a copy</errorMessage>
</ValidationRule>