objects/Test_Case__c/listViews/My_Test_Case_Assignments_All.listView-meta.xml
<ListView>
    <fullName>My_Test_Case_Assignments_All</fullName>
    <columns>NAME</columns>
    <columns>Test_Summary__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Test_Case_Prioirity__c</columns>
    <columns>Test_Instructions__c</columns>
    <columns>Expected_Result__c</columns>
    <columns>Test_Status__c</columns>
    <columns>Story_Summary__c</columns>
    <columns>Story_Owner__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Test_Case__c.Test_Case_Assignment</value>
    </filters>
    <label>My Test Case Assignments - All</label>
</ListView>